--- a/server/config/config.yaml
+++ b/server/config/config.yaml
@@ -2,5 +2,6 @@ server:
   server_port: :8181
 
 grill_client:
-  grill_ip: 192.168.1.29
+  grill_ip: 192.168.1.25
   grill_port: 8080
+  is_mock: true
